# -- Project Metadata -------------------------------------------------------------
[project]
name = "PH-GH-Component-IO"
version = "0.0.3"
description = "Rhino/Grasshopper Component I/O Utility Library."
readme = "README.md"
requires-python = ">=2.7"
license = "GPL-3.0-or-later"
authors = [{ name = "PH-Tools", email = "phtools@bldgtyp.com" }]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
keywords = ["Rhino", "Grasshopper"]
dependencies = []

[project.optional-dependencies]
dev = ["black", "isort", "Grasshopper-stubs", "Rhino-stubs"]

[project.urls]
homepage = "https://www.passivehousetools.com/"
repository = "https://github.com/PH-Tools/PH_GH_Component_IO"

# -- Bump My Version ---------------------------------------------------------------
# This repo is distributed via GitHub (not PyPI), so we only tag — no publish step.
[tool.bumpversion]
current_version = "0.0.3"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# -- Code Quality ------------------------------------------------------------------
[tool.black]
line-length = 120
